# SparseEndtoEnd

./: .gitignore  QUICK-START.md  TOPK_CONSISTENCY_README.md
C++/: CMakeLists.txt  README.md  README_BIN_EXPORT.md  TestSparse4D.cpp  TestSparseBEV8.6.cpp  TestSparseBEVAlg.cpp  TestSparseBEVAlgv2.cpp  build.sh  main.cpp
C++/Include/Common/Core/: GlobalContext.h
C++/Include/Common/ErrorHandler/: ErrorHandler.h  ErrorHandlerConfigParser.h  ErrorHandlerFactory.h  ErrorMonitor.h  ErrorRecovery.h  ErrorTypes.h  IErrorHandler.h  README_ErrorHandler.md
C++/Include/Common/Factory/: ModuleFactory.h
C++/Include/Common/Interface/: IAlgorithmConfig.h  IBaseModule.h
C++/Include/Common/Utils/: CudaWrapper.h
C++/Include/Interface/: ExportSparse4D.h  ExportSparseAlgLib.h  ExportSparseBEVAlgLib.h
C++/Output/: testAlgLib
C++/Output/Configs/Alg/: Sparse4d.conf  SparseBEV8_6Config-backup.conf  SparseBEV8_6Config.conf  SparseBEVConfig.conf  TestConfig.conf
C++/Output/testAlgLib-topk/: topkinstance
C++/Src/: CMakeLists.txt
C++/Src/Common/: CMakeLists.txt
C++/Src/Common/Core/: FunctionHub.h
C++/Src/Common/ErrorHandler/: ErrorHandler.cpp  ErrorHandlerConfigParser.cpp  ErrorRecovery.cpp
C++/Src/Common/TensorRT/: Logging.cpp  Logging.h  TensorRT.cpp  TensorRT.h
C++/Src/Sparse4D/: ExportSparse4D.cpp  sparse4d.cpp  sparse4d.hpp
C++/Src/Sparse4D/common/: context.hpp  functionhub.hpp
C++/Src/Sparse4D/postprocessor/: gpu_nms.cu  gpu_nms.hpp  postprocessor.cpp  postprocessor.hpp
C++/Src/Sparse4D/preprocessor/: img_aug_with_bilinearinterpolation_kernel.cu  img_preprocessor.cpp  img_preprocessor.hpp
C++/Src/Sparse4D/sparse4d/: backbone.cpp  backbone.hpp  first_head.cpp  first_head.hpp  instance_bank.cpp  instance_bank.hpp  second_head.cpp  second_head.hpp  utils_kernels.cu
C++/Src/SparseBEV/: CMakeLists.txt  CSparseBEVAlg.cpp  CSparseBEVAlg.h  ExportSparseBEVAlgLib.cpp
C++/Src/SparseBEV/Inference/: InstanceBank.h  SparseBEV.cpp  SparseBEV.h  Utils.cpp  Utils.h
C++/Src/SparseBEV/Preprocess/: img_aug_with_bilinearinterpolation_kernel.h  img_preprocessor.cpp  img_preprocessor.h
C++/Src/SparseBEV8.6/: CMakeLists.txt  CSparseBEVAlg.cpp  ExportSparseBEVAlgLib.cpp
C++/Src/SparseBEV8.6-backup/: CSparseBEVAlg.cpp  CSparseBEVAlg.h
C++/Src/SparseBEV8.6-backup/Inference/: InstanceBank.cpp  SparseBEV.cpp  SparseBEV.h  Utils.cpp
C++/Src/SparseBEV8.6-backup/Postprocess/: OPTIMIZED_DATAFLOW_README.md  PostProcess.h
C++/Src/SparseBEV8.6-backup/Preprocess/: img_preprocessor.cpp
C++/Src/SparseBEV8.6/Inference/: InstanceBank.cpp  InstanceBank.h  RawInferenceResult.cpp  RawInferenceResult.h  SparseBEV.cpp  SparseBEV.h  Utils.cpp
C++/Src/SparseBEV8.6/InferenceGPU/: InstanceBankGPU.cpp  InstanceBankGPU.h  RawInferenceResult.h  SparseBEV.cpp  SparseBEV.h  UtilsGPU.cpp  UtilsGPU.h  UtilsGPU_kernels.cu  UtilsGPU_kernels.cuh
C++/Src/SparseBEV8.6/InferenceGPU-backup/: InstanceBankGPU.cpp  InstanceBankGPU.cpp.backup  InstanceBankGPU.h  SparseBEV.cpp  SparseBEV.h  UtilsGPU_kernels.cu  UtilsGPU_kernels.cu.backup  UtilsGPU_kernels.cuh
C++/Src/SparseBEV8.6/Postprocess/: PostProcess.cpp  gpu_nms.cu  gpu_nms.h
C++/Src/SparseBEV8.6/Preprocess/: img_preprocessor.cpp  img_preprocessor.h
C++/Src/SparseBEV8.6/Preprocess-backup/: img_aug_with_bilinearinterpolation_kernel.cu  img_preprocessor.cpp  img_preprocessor.h
C++/Src/SparseBEVFP16/: CSparseBEVAlg.cpp
C++/Src/SparseBEVFP16/Inference/: SparseBEV.cpp  SparseBEV.h  Utils.h
C++/Src/SparseBEVFP16/InferenceGPU/: SparseBEV.cpp  SparseBEV.h  UtilsGPU_kernels.cuh
C++/Src/SparseBEVFP16/InferenceGPUFP16/: InstanceBankGPU.cpp  InstanceBankGPU.h  SparseBEVFP16.cpp  SparseBEVFP16.h  UtilsGPU_kernels.cu  UtilsGPU_kernels.cuh
C++/Src/SparseBEVFP16/Postprocess/: PostProcess.cpp  PostProcess.h  (+1 more)
C++/Submodules/Protoser/: CMakeLists.txt
C++/script/: compare_cpp_vs_python.py  lidar2img.py  run_comparison_test.sh  run_preprocessor_featurebefore_comparison.sh  test_tensorrt_output.py
C++/script/compare/: compare_030_vs_010_data.py  compare_4d_vs_BEV86_2.py  compare_preprocessed_bins.py  run_compare.sh
C++/script/model_input/: feature_compare.py  ibank_data_compare.py  other_input_compare.py  pred_anchor_compare.py  pred_class_quality_trackid_compare.py  pred_instance_feature_compare.py  preprocess_img_compare.py  print_track_id_bins.py  run_topkinstance.sh  second_frame_infer_input_compare.py  tmp_outs_compare.py  topkinstance.cpp
C++/script/model_input_gpu/: bin_to_txt.py  cache_input_compare.py  first_cached_data_compare.py  first_input_compare.py  first_output_compare.py  second_input_compare.py  second_output_compare.py
deploy/dfa_plugin/: CMakeLists.txt  deformableAttentionAggr.cu  deformableAttentionAggrPlugin.cpp  deformableAttentionAggrPlugin.h  export_dfa_onnx_and_engine.py
deploy/dfa_plugin/tools/: 01_setEnv.sh  02_buildCustomDFAEngine.sh
deploy/dfa_plugin/unit_test/: deformable_feature_aggregation_infer-consistency-val_pytorch_vs_trt_unit_test.py  test_dfa_consistency.py
onboard/: CMakeLists.txt  generate_bin.py  main.cpp  optimize_feature_extraction.py
onboard/assets/: model_cfg.yaml
onboard/common/: CMakeLists.txt  common.h  cuda_wrapper.cu.h  parameter.h  utils.h
onboard/common/unit_test/: CMakeLists.txt
onboard/head/: instance_bank.cpp  instance_bank.h  utils.h
onboard/head/unit_test/: README.md
onboard/preprocessor/: CMakeLists.txt  img_aug_with_bilinearinterpolation_kernel.cu  img_aug_with_bilinearinterpolation_kernel.h  img_preprocessor.cpp  img_preprocessor.h  parameters_parser.h
onboard/preprocessor/unit_test/: CMakeLists.txt
onboard/tensorrt/: logging.cpp  logging.h  tensorrt.cpp  tensorrt.h
onboard/unit_test/sparse4d_extract_feat_trt_infer_unit_test/: CMakeLists.txt  sparse4d_extract_feat_trt_infer_unit_test.cpp
onboard/unit_test/sparse4d_head_first_frame_trt_infer_unit_test/: CMakeLists.txt  sparse4d_head_first_frame_trt_infer_unit_test.cpp
onboard/unit_test/sparse4d_head_second_frame_trt_infer_unit_test/: CMakeLists.txt  sparse4d_head_second_frame_trt_infer_unit_test.cpp
script/: test.py  (+6 more)
(+92 files in other folders)
